--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 		<p id="appreciation">Thank you for viewing my portfolio!<br>
 			I'm looking forward to working with you. You can follow me on social media and other platforms:</p>
 			<div id="social-icons">
-				<a href="https://facebook.com/steve.wina.muntanga" target="_blank"><img src="images/facebook-icon.png" alt="icon" class="icon"></a>
+				<a href="https://facebook.com/steve.wina.muntanga" target="_blank"><img src="1.png" alt="icon" class="icon"></a>
 				<a href="https://www.linkedin.com/mwlite/in/steve-wina-muntanga" target="_blank"><img src="images/linkedin-icon.png" alt="icon" class="icon"></a>
 				<a href="https://instagram.com/steve.wina.muntanga" target="_blank"><img src="images/instagram-icon.png" alt="icon" class="icon"></a>
 				<a href="https://twitter.com/SteveMuntanga" target="_blank"><img src="images/twitter-icon.png" alt="icon" class="icon"></a>
