--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 				<a href="https://instagram.com/steve.wina.muntanga" target="_blank"><img src="images/instagram-icon.png" alt="icon" class="icon"></a>
 				<a href="https://twitter.com/SteveMuntanga" target="_blank"><img src="images/twitter-icon.png" alt="icon" class="icon"></a>
 <a href="https://github.com/SteveWinaMuntanga" target="_blank"><img src="images/github-icon.png" alt="icon" class="icon"></a>
-<a href="https://wa.me/qr/O2XDSAHO4VA5L1" target="_blank"><img src="images/whatsapp-icon.png" alt="icon" class="icon"></a>
+<a href="https://wa.me/qr/O2XDSAHO4VA5L1" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="icon" class="icon"></a>
 </div>
 <div id="motto"><i>Together we can change the world!</i></div>
 			<div id="copyright">
