--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
 			I'm looking forward to working with you. You can follow me on social media and other platforms:</p>
 			<div id="social-icons">
 				<a href="https://Facebook.com/Steve.wina.Muntanga" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2175/2175193.png" alt="icon" class="icon"></a>
-				<a href="https://www.linkedin.com/mwlite/in/steve-wina-muntanga" target="_blank"><img src="images/linkedin-icon.png" alt="icon" class="icon"></a>
-				<a href="https://instagram.com/steve.wina.muntanga" target="_blank"><img src="images/instagram-icon.png" alt="icon" class="icon"></a>
-				<a href="https://twitter.com/SteveMuntanga" target="_blank"><img src="images/twitter-icon.png" alt="icon" class="icon"></a>
+				<a href="https://www.linkedin.com/mwlite/in/steve-wina-muntanga" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3536/3536569.png" alt="icon" class="icon"></a>
+				<a href="https://instagram.com/steve.wina.muntanga" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111491.png" alt="icon" class="icon"></a>
+				<a href="https://twitter.com/SteveMuntanga" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/25/25347.png" alt="icon" class="icon"></a>
 <a href="https://github.com/SteveWinaMuntanga" target="_blank"><img src="images/github-icon.png" alt="icon" class="icon"></a>
-<a href="https://wa.me/qr/O2XDSAHO4VA5L1" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="icon" class="icon"></a>
+<a href="https://wa.me/qr/O2XDSAHO4VA5L1" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384095.png" alt="icon" class="icon"></a>
 </div>
 <div id="motto"><i>Together we can change the world!</i></div>
 			<div id="copyright">
