--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 	<div id="Why-Hire-Me"><h3>Why Hire Me</h3>
 <p>I believe every client deserves quality results from a freelancer. I put my best in building websites and flier/logo design. I only allow my clients pay 25% down payment(refundable) of the total amount for each project. The rest, 75%, is paid after the project is completed and the client is satisfied with the work.</p>
 <p>I take my time during development and design to avoid mistakes that can cost both me as a freelancer and clients. And if a client finds an error or mistake later, they're always welcome for corrections with zero charges.</p>
-<p>I believe this is what makes my clients to to stick with me and recommend me to others. I believe this what you want too.</p></div>
+<p>I believe this is what makes my clients to stick with me and recommend me to others. I believe this is what you want too.</p></div>
 	<div id="My-Projects"><h3>My Projects</h3>
 <p>I've worked on a number of projects. Most of them are stored on on my local drive, but if you still want to see them, you can <a href="tel: +260977474190">contact me</a>. One of them is a music streaming website. I'm about to complete building an ecommerce website for my business Wina Mobile. All of my projects will soon be pushed to GitHub.</p>
 <p>I'm one of the lead developers for <a href="https://www.facebook.com/profile.php?id=100087930759983" target="_blank">Flexi Remote</a>, a platform for connecting freelancers and clients. It also has a section where beginners can take courses and learn freelancing.</p>
